--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -22,5 +22,6 @@
   .footer__text {
     font-size: 16px;
     line-height: 16.94px;
+    max-width: 282px;
   }
 }
