--- a/blocks/header.css
+++ b/blocks/header.css
@@ -14,6 +14,5 @@
   .header__logo {
     width: 126px;
     height: 24px;
-    padding-left: 27px;
   }
 }
